# MUreplay

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: user-guide.md
frontend/: app.js  index.html  runtime-config.template.js  style.css
frontend/modules/: api.js  charts.js  loaders.js  replay.js  state.js  utils.js
python/: server.py
python/mureplay/: __init__.py  api.py  bids.py  dialog.py  filter_update.py  loaders.py  replay_ops.py  save.py
scripts/: run_MUreplay.ps1  run_MUreplay.sh
